--- a/css/home.css
+++ b/css/home.css
@@ -9,6 +9,7 @@ header{
   margin:0;
   display:grid;
   grid-template-rows: auto auto;
+  overflow: hidden;
 }
 
 a{
@@ -23,7 +24,7 @@ a:hover{
 
 #hero-banner, #banner-text{
   height: 50vh;
-  width: 100vw;
+  width: 100%;
   margin:0;
   padding:0;
   grid-area:1/1;
